# tsp_ga

./: LICENSE  README.md  main.py  pyproject.toml
src/: genetic_algorithm.py  nearest_neighbor.py  parser.py  utils.py
