[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "tsp-ga"
version = "1.0.0"
description = "Solving the Travelling Salesman Problem (TSP) using a Genetic Algorithm with Order Crossover (OX1), Tournament Selection, and Swap Mutation. Includes a Nearest Neighbor heuristic as a baseline and supports TSPLIB instances (gr17, gr21, gr24)."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Jesus", email = "jesus@example.com"},
]
keywords = [
    "tsp",
    "travelling-salesman-problem",
    "genetic-algorithm",
    "metaheuristic",
    "combinatorial-optimization",
    "tsplib",
    "nearest-neighbor",
    "order-crossover",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Mathematics",
]
dependencies = [
    "numpy>=1.24",
    "matplotlib>=3.7",
]

[project.urls]
Homepage = "https://github.com/jesus/tsp-ga"
Repository = "https://github.com/jesus/tsp-ga"
Issues = "https://github.com/jesus/tsp-ga/issues"

[project.scripts]
tsp-ga = "main:main"

[tool.setuptools]
py-modules = ["main"]

[tool.setuptools.packages.find]
include = ["src*"]

[tool.setuptools.package-data]
"*" = ["data/*.tsp"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "N",    # pep8-naming
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
]
ignore = [
    "E501",  # line too long (handled by formatter)
]

[tool.ruff.lint.isort]
known-first-party = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
